# bazel-scala-sandbox

./: .bazelrc  .gitignore  .scalafmt.conf  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  maven_install.json
.github/workflows/: ci.yml
src/main/scala/cmd/: BUILD  BUILD.bazel  Runner.scala
src/main/scala/lib/: BUILD  BUILD.bazel  Greeting.scala
src/test/scala/: BUILD  BUILD.bazel
src/test/scala/com/example/: ExampleTest.scala
tools/: scala.bzl
tools/build_rules/: prelude_bazel
